fix main content overflow on short screens

--- a/client/components/critical/_main-body.styl
+++ b/client/components/critical/_main-body.styl
@@ -1,5 +1,6 @@
 .main
   color #fff
+  overflow auto
   overflow-wrap break-word
   word-wrap break-word
   word-break break-word
@@ -35,7 +36,7 @@
     z-index 10
 
   .main-content
-    height 100%
+    min-height 100%
 
 @media $tablet
   .main
